Use only public APIs to read PKCS#1 keys (#5240) (#5259)
* Use only public APIs to read PKCS#1 keys (#5240)

Co-authored-by: Weijun Wang <weijun.wang@oracle.com>
Signed-off-by: Tomas Langer <tomas.langer@oracle.com>

* Cannot use Java 17 APIs

Signed-off-by: Tomas Langer <tomas.langer@oracle.com>

* Copyright fix

Signed-off-by: Tomas Langer <tomas.langer@oracle.com>

Signed-off-by: Tomas Langer <tomas.langer@oracle.com>
Co-authored-by: Weijun Wang <weijun.wang@oracle.com>